[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Bitread.tres" type="DynamicFont" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Levels/0_TitleScreen/Login.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment(){
    
    const float WIDTH = 32.;
    vec2 cell = floor(UV * WIDTH);
    
    vec3 col = abs(
        vec3(
			cell.y*sin(-TIME + abs(cell.y)*0.5 ),
			cell.y*sin(-TIME + abs(cell.y)*0.5 ) * .5,
			cell.y*sin(-TIME + abs(cell.y)*0.5 ) * .2)
    ) * (0.3/WIDTH);
    

    COLOR = vec4(col,1.0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/Bitread-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_top = 315.0
margin_right = 641.0
margin_bottom = 480.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 513.0
margin_top = 406.0
margin_right = 603.0
margin_bottom = 441.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="LineEdit" parent="."]
margin_left = 27.0
margin_top = 406.0
margin_right = 225.0
margin_bottom = 441.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "Enter Vulcan Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="."]
margin_left = 246.0
margin_top = 406.0
margin_right = 471.0
margin_bottom = 441.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
secret = true
placeholder_text = "Enter Vulcan Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 9.0
margin_top = 450.0
margin_right = 246.0
margin_bottom = 475.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.972549, 0.619608, 0.203922, 1 )
text = "V1.2 - Primary Survey"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mistake" type="Label" parent="."]
visible = false
margin_left = 45.0
margin_top = 378.0
margin_right = 610.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.141176, 0.0117647, 1 )
text = "Email or Password Incorrect"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connecting" type="Label" parent="."]
visible = false
margin_left = 45.0
margin_top = 378.0
margin_right = 610.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.141176, 0.0117647, 1 )
text = "Connecting..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoServer" type="Label" parent="."]
visible = false
margin_left = 45.0
margin_top = 378.0
margin_right = 610.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.141176, 0.0117647, 1 )
text = "Unable to Connect to the Server"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_left = 45.0
margin_top = 329.0
margin_right = 610.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 4 )
text = "Authentication Token Expired
Please Login again to see if you are eligible for a reward."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoKey" type="Label" parent="."]
visible = false
margin_left = 45.0
margin_top = 378.0
margin_right = 610.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.141176, 0.0117647, 1 )
text = "GeoKey Missing"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 603.0
margin_top = 324.0
margin_right = 633.0
margin_bottom = 349.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
